# AOC2024

cpp/: .clang-tidy  CMakeLists.txt  main.cpp
cpp/day3/: day3.hpp
day1/src/: main.rs
ex/lib/: ex.ex
rust/: Cargo.toml  config.toml
rust/src/: main.rs
rust/src/day1/: mod.rs
rust/src/day2/: mod.rs
rust/src/day4/: mod.rs
rust/src/day6/: mod.rs
rust/src/day7/: mod.rs
rust/src/day8/: mod.rs
